--- a/BloodspireofDevis.ini
+++ b/BloodspireofDevis.ini
@@ -8,9 +8,9 @@ difficulty=0.8
 lengthmin=120
 lengthmax=180
 image=Stewards2.png
-version=DC-50-8A-0A-E9-74-A4-1D-27-B3-2D-86-EC-51-99-51-B1-56-0C-D4-3D-00-1D-71-3B-B1-E5-06-68-25-60-5F
+version=AC-1F-F4-E9-EA-8C-2C-8D-EB-31-86-23-EF-E1-8A-91-E1-5F-05-1E-9F-90-60-EB-AF-73-1B-9A-5B-EB-3D-1E
 name.English=SS2 - Bloodspire of Devis (v1.1)
-synopsys.English=A digital adaptation of the Descent quest - <b>Bloodspire of Devis.</b>
-description.English=A digital adaptation of the Descent Second Edition quest - Bloodspire of Devis.\n\nThis is an Act II quest contained in the Stewards of the Secret collection.\n\nPlease report bugs at https://github/afellowspelunker/BloodspireofDevis/issues.
+synopsys.English=Defeat the Bloodspire!  This quest may be played using only the base game.
+description.English=A digital adaptation of the Descent Second Edition quest - Bloodspire of Devis.\n\nThis is an Act II quest contained in the Stewards of the Secret collection.\n\nThis quest may be played using only the base game.  It supports all expansions in your collection.\n\nPlease report bugs at https://github/afellowspelunker/BloodspireofDevis/issues.
 authors.English=afellowspelunker
 authors_short.English=afellowspelunker
