Added Spanish translation.

--- a/BloodspireofDevis.ini
+++ b/BloodspireofDevis.ini
@@ -8,9 +8,14 @@ difficulty=0.8
 lengthmin=120
 lengthmax=180
 image=Stewards2.png
-version=AC-1F-F4-E9-EA-8C-2C-8D-EB-31-86-23-EF-E1-8A-91-E1-5F-05-1E-9F-90-60-EB-AF-73-1B-9A-5B-EB-3D-1E
+version=68-82-3E-B4-E3-19-7F-BA-D0-36-BF-42-66-54-3E-2A-87-AB-0D-C5-2B-20-6D-09-78-4F-8D-0B-27-81-08-D2
 name.English=SS2 - Bloodspire of Devis (v1.1)
+name.Spanish=SS2 - La torre sangrienta de Devis (v1.1)
 synopsys.English=Defeat the Bloodspire!  This quest may be played using only the base game.
+synopsys.Spanish=¡Derrota a Bloodspire!  Esta misión se puede jugar usando únicamente el juego base.
 description.English=A digital adaptation of the Descent Second Edition quest - Bloodspire of Devis.\n\nThis is an Act II quest contained in the Stewards of the Secret collection.\n\nThis quest may be played using only the base game.  It supports all expansions in your collection.\n\nPlease report bugs at https://github/afellowspelunker/BloodspireofDevis/issues.
+description.Spanish=Una adaptación digital de la aventura «La torre sangrienta de Devis» (Acto II) para la expansión «Senescales del Secreto» del juego Descent, segunda edición. \n\n Por favor, avisa de cualquier incidencia o fallo en la siguiente dirección: https://github/afellowspelunker/BloodspireofDevis/issues.\n\n<b>Nota:</b> Esta aventura puede jugarse usando solo el juego base. Es compatible con todas las expansiones de tu colección (usará los monstruos disponibles en tu colección si no están disponibles los de la correspondiente expansión de "Héroes y Monstruos").
 authors.English=afellowspelunker
+authors.Spanish=\n Autor: afellowspelunker \n\n Traducción al español: Vidimus
 authors_short.English=afellowspelunker
+authors_short.Spanish=afellowspelunker
